--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,80 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.App {
+  font-family: sans-serif;
+  text-align: center;
+}
+.NavBar {
+  border-bottom: 1px groove rgb(221, 221, 221);
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 0.5rem;
+}
+
+li {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+
+form {
+  background: white;
+  border: 1px solid #dedede;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 0 auto;
+  max-width: 500px;
+  padding: 30px 50px;
+}
+
+.button-wrapper {
+  display: flex;
+  justify-content: space-around;
+  margin: 0 auto;
+}
+
+
+input {
+  border: 1px solid #d9d9d9;
+  border-radius: 4px;
+  box-sizing: border-box;
+  padding: 10px;
+  width: 100%;
+}
+
+label {
+  color: #3d3d3d;
+  display: block;
+  font-family: sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  margin-bottom: 5px;
+}
+
+.error {
+  display: flex;
+  justify-content: space-around;
+  margin: 0 auto;
+  color: red;
+  font-family: sans-serif;
+  font-size: 12px;
+  height: 30px;
+}
+
+.submitButton {
+  background-color: #6976d9;
+  color: white;
+  font-family: sans-serif;
+  font-size: 14px;
+  margin: 20px 0px;
+}
